# market-sentiments

./: .gitignore  AION_MODEL_STATEMENT.md  CHANGELOG.md  CONTRIBUTING.md  ENV_SETUP.md  MODEL_ATTRIBUTION_CORRECTION.md  PACKAGE_SUMMARY.md  README.md  RELEASE_CHECKLIST.md  RELEASE_SUMMARY_V3.md  STRUCTURE.md  VERIFICATION_CHECKLIST.md  dev_journal.md  dev_journal_complete.md  push_to_github.sh  release.sh  scrape_nse_sectors.py  sector_mapper.py  test_redis_sentiment.py  test_v2_model.py
.qwen/agents/: aion-oss-strategist.md
aion-newsimpact/: README.md  example.py  pyproject.toml  requirements.txt  setup.py
aion-newsimpact/examples/: demo.ipynb
aion-newsimpact/src/aion_newsimpact/: __init__.py  impact.py  py.typed
aion-newsimpact/tests/: __init__.py  test_impact.py
aion-sectormap/: LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py
aion-sectormap/scripts/: update_map.py
aion-sectormap/src/aion_sectormap/: __init__.py  mapper.py  py.typed
aion-sectormap/src/aion_sectormap/data/: sector_map.json
aion-sectormap/tests/: __init__.py  test_mapper.py
aion-sentiment/: .gitignore  MANIFEST.in  README.md  backfill_taxonomy.py  example.py  pyproject.toml  requirements-dev.txt  requirements.txt  sentiment_labelling_indian_financial_market.yaml  setup.py  taxonomy_india_v2.yaml
aion-sentiment-in/: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  MODEL_CARD_HF.md  MODEL_CARD_HF_V3.md  README.md  README_HF.md  convert_to_mlx_format.py  create_corrected_data.py  create_sample_data.py  demo.py  emotion_utils.py  extract_data.sql  model_card.md  prepare_data.py  prepare_data_vader.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  train_mlx.py  train_sentiment.py  train_sentiment_mlx.py  training_log.txt  training_log_v2.txt  upload_to_huggingface.py
aion-sentiment-in/data/: README.md
aion-sentiment-in/notebooks/: README.md
aion-sentiment-in/src/aion_sentiment/: __init__.py  emotion.py  emotions.py  model.py  py.typed  train.py
aion-sentiment-in/tests/: README.md  __init__.py  conftest.py  test_prepare_data.py
aion-sentiment/data/: .gitkeep
aion-sentiment/src/aion_sentiment/: __init__.py  emotions.py  py.typed  sentiment.py  utils.py
aion-sentiment/src/aion_sentiment/lexicons/: __init__.py
aion-sentiment/src/data/: nrc_lexicon.txt
aion-sentiment/tests/: __init__.py  test_emotions.py  test_sentiment.py
aion-volweight/: README.md  example.py  pyproject.toml  requirements.txt  setup.py
aion-volweight/src/aion_volweight/: __init__.py  volweight.py
aion-volweight/tests/: __init__.py  test_volweight.py
aion_taxonomy/: README.md  backfill_summary_report.txt  calibrate_taxonomy.py  calibration_report.txt  calibration_summary.txt  keyword_enhancement_summary.txt  no_match_events.txt  pyproject.toml  requirements.txt  setup.py  taxonomy_india_v2_calibrated.yaml  taxonomy_india_v2_calibrated.yaml.backup
aion_taxonomy/src/aion_taxonomy/: __init__.py  classifier.py  confidence.py  impact.py  loader.py  pipeline.py  utils.py
aion_taxonomy/tests/: __init__.py  test_taxonomy.py
examples/: generate_output.py  sentiment_analysis.ipynb
