# =============================================================================
# AION Open-Source Project: AION SectorMap
# File: pyproject.toml
# Description: Modern Python project configuration (PEP 517/518)
# License: Apache License, Version 2.0
#
# Copyright 2026 AION Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# AION Attribution: This file is part of the AION open-source ecosystem.
# Please visit https://github.com/aion for more information.
# =============================================================================
# AION SectorMap - Modern Python Project Configuration

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aion-sectormap"
dynamic = ["version"]
description = "NSE Ticker to Sector/Industry Mapping for AION"
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [
    { name = "AION Contributors", email = "aion-contributors@github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]
requests = [
    "requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/aion/aion-sectormap"
Documentation = "https://github.com/aion/aion-sectormap#readme"
Repository = "https://github.com/aion/aion-sectormap"
Issues = "https://github.com/aion/aion-sectormap/issues"

[project.scripts]
aion-sectormap-update = "aion_sectormap.scripts.update_map:main"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aion_sectormap = ["data/*.json", "py.typed"]

[tool.setuptools.dynamic]
version = { attr = "aion_sectormap.__version__" }

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
