# =============================================================================
# AION Open-Source Project: Sentiment Analysis Pipeline
# File: pyproject.toml
# Description: Modern Python packaging configuration for AION Sentiment Analysis
# License: Apache License, Version 2.0
#
# Copyright 2026 AION Contributors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# AION Attribution: This file is part of the AION open-source ecosystem.
# Please visit https://github.com/aion for more information.
# =============================================================================
#
# AION Sentiment Analysis - Python Packaging Configuration
# ---------------------------------------------------------
# Modern Python packaging using pyproject.toml (PEP 517/518/621)
#
# =============================================================================

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
# Basic Information
name = "aion-sentiment-in"
version = "0.1.0"
description = "AION Open-Source Sentiment Analysis for Financial News"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "AION Contributors", email = "contributors@aion.io"}
]
maintainers = [
    {name = "AION Contributors", email = "contributors@aion.io"}
]
keywords = [
    "aion",
    "sentiment-analysis",
    "financial-nlp",
    "news-sentiment",
    "machine-learning",
    "nlp",
    "finance",
    "stock-market",
    "open-source",
    "huggingface",
    "emotion-analysis",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
    "Typing :: Typed",
]

# Dependencies
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.0",
]

# Optional Dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "numpydoc>=1.5.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]
all = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "numpydoc>=1.5.0",
    "jupyter>=1.0.0",
    "notebook>=7.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

# Project URLs
[project.urls]
Homepage = "https://github.com/aion/aion-sentiment-in"
Documentation = "https://github.com/aion/aion-sentiment-in#readme"
Repository = "https://github.com/aion/aion-sentiment-in.git"
Issues = "https://github.com/aion/aion-sentiment-in/issues"
HuggingFace = "https://huggingface.co/aion-analytics/aion-sentiment-in-v1"
Changelog = "https://github.com/aion/aion-sentiment-in/releases"

# Entry Points (CLI commands)
[project.scripts]
aion-sentiment = "aion_sentiment.cli:main"

# Package Configuration
[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["aion_sentiment*"]

[tool.setuptools.package-data]
aion_sentiment = ["py.typed", "data/lexicons/*.txt"]

# Black Configuration
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

# isort Configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# pytest Configuration
[tool.pytest.ini_options]
minversion = "7.4"
addopts = "-ra -q --cov=aion_sentiment --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage Configuration
[tool.coverage.run]
source = ["aion_sentiment"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

# mypy Configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "transformers.*",
    "torch.*",
    "datasets.*",
]
ignore_missing_imports = true

# flake8 Configuration
[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]
per-file-ignores = [
    "__init__.py:F401",
]

# Pre-commit Configuration
[tool.pre-commit]
repos = [
    {repo = "https://github.com/pre-commit/pre-commit-hooks", rev = "v4.5.0", hooks = [
        {id = "trailing-whitespace"},
        {id = "end-of-file-fixer"},
        {id = "check-yaml"},
        {id = "check-added-large-files"},
    ]},
    {repo = "https://github.com/psf/black", rev = "23.12.1", hooks = [
        {id = "black"}
    ]},
    {repo = "https://github.com/pycqa/flake8", rev = "7.0.0", hooks = [
        {id = "flake8"}
    ]},
    {repo = "https://github.com/pre-commit/mirrors-mypy", rev = "v1.8.0", hooks = [
        {id = "mypy"}
    ]},
]

# AION Project Metadata
[tool.aion]
project_name = "AION Sentiment Analysis"
organization = "AION Open-Source"
website = "https://github.com/aion"
huggingface_org = "aion-analytics"
default_model = "aion-sentiment-in-v1"
